@@ -149,6 +149,13 @@ elements</a>).</p>
     <td align="center" valign="top">No; default is the project's base
       directory.</td>
   </tr>
+  <tr>
+    <td valign="top">reloading</td>
+    <td valign="top">Whether or not a new classloader should be instantiated for each test case.<br/>
+    Ignore if <code>fork</code> is set to true.
+      <em>Since Ant 1.6</em>.</td>
+    <td align="center" valign="top">No; default is <code>true</code>.</td>
+  </tr>
 </table>
 
 <p>By using the <code>errorproperty</code> and <code>failureproperty</code>
